#2617 Order-by within concatOf rationalisation: ANTLR parser and EQL transformations